# cardwire-tray-icon

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  cardwire-tray-icon.spec  cardwire-tray.desktop  me.edyan.cardwiretray.desktop  me.edyan.cardwiretray.yml
.github/workflows/: main.yml
src/: main.rs
