[package]
name = "cardwire-tray"
version = "0.2.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
ksni = "0.3.4"
notify-rust = "4.17.0"
rfd = "0.17.2"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
zbus = { version = "5.15.0", features = ["tokio"] }
